@@ -32,7 +32,7 @@ my %WriteMakefileArgs = (
     "File::chdir" => 0,
     "Git::Wrapper" => "0.042",
     "IO::Prompt::Simple" => 0,
-    "List::AllUtils" => "0.09",
+    "List::Util" => "1.33",
     "Moo" => "2.000000",
     "MooX::HandlesVia" => "0.001008",
     "Path::Tiny" => 0,
